# youtube-transcript-summarizer

./: .cspell.json  .editorconfig  .gitignore  .prettierignore  LICENSE  README.md  Taskfile.yml  dprint.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: dprint.yml  prettier.yml  spell-check.yml
src/: __init__.py  summarize.py
src/internal/: __init__.py  entities.py  youtube_transcript.py
